--- a/scss/variables/_borders.scss
+++ b/scss/variables/_borders.scss
@@ -3,6 +3,6 @@
 // 
 
 $border-width: 0.125rem;
-$border-radius: 0rem;
-$border-radius-lg: 0.75rem;
-$border-radius-sm: 0.25rem;
+$border-radius: 15%;
+$border-radius-lg: 15%;
+$border-radius-sm: 15%;
