--- a/scss/variables/_typography.scss
+++ b/scss/variables/_typography.scss
@@ -2,7 +2,7 @@
 // Typography
 // 
 
-$font-family-sans-serif: "Lato",
+$font-family-sans-serif: "Inter",
 -apple-system,
 BlinkMacSystemFont,
 "Segoe UI",
@@ -16,7 +16,7 @@ sans-serif,
 "Segoe UI Symbol",
 'Noto Color Emoji';
 
-$headings-font-family: "Montserrat",
+$headings-font-family: "Gasoek One",
 -apple-system,
 BlinkMacSystemFont,
 "Segoe UI",
@@ -30,6 +30,6 @@ sans-serif,
 "Segoe UI Symbol",
 'Noto Color Emoji';
 
-$headings-font-weight: 700;
+$headings-font-weight: 400;
 $font-size-base: 1rem;
 $font-size-lg:                $font-size-base * 1.75;
