--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -24,3 +24,4 @@ $bootstrap-icons-font-src: url("../node_modules/bootstrap-icons/font/fonts/boots
 @import "./sections/masthead.scss";
 @import "./sections/portfolio.scss";
 @import "./sections/footer.scss";
+@import "./sections/login.scss";
