--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -25,3 +25,4 @@ $bootstrap-icons-font-src: url("../node_modules/bootstrap-icons/font/fonts/boots
 @import "./sections/portfolio.scss";
 @import "./sections/footer.scss";
 @import "./sections/login.scss";
+@import "./sections/registro.scss";
