header, footer, styles.scss, logo150px and delete of unused files

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -12,6 +12,11 @@ html {
     scroll-padding-top: calc(#{$navbar-height} - 1px);
 }
 
+html, body {
+    color: $light;
+    background-color: $primary !important;
+}
+
 // Styling for page sections
 .page-section {
     padding: 6rem 0;
