--- a/scss/variables/_colors.scss
+++ b/scss/variables/_colors.scss
@@ -19,7 +19,7 @@ $warning: $resalte;
 $danger: $resalte;
 $light: $texto_claro;
 $dark: $texto_oscuro;
-$body-bg: $texto_claro;
+$body-bg: $primario;
 
 //- Component specific colors
 $colorboton: $resalte;
