--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -15,6 +15,8 @@ html {
 html, body {
     color: $light;
     background-color: $primary !important;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 // Styling for page sections
