--- a/scss/sections/_footer.scss
+++ b/scss/sections/_footer.scss
@@ -29,7 +29,7 @@
             font-size: 1.1rem;
 
             &:hover {
-                text-decoration: underline;
+                opacity: 0.8;
             }
         }
     }
