--- a/scss/sections/_navigation.scss
+++ b/scss/sections/_navigation.scss
@@ -45,6 +45,10 @@
         cursor: pointer;
         font-size: 1.4rem;
         padding: 0;
+
+        &:hover {
+            opacity: 0.8;
+        }
     }
 
     // quitar triángulo del dropdown
@@ -65,6 +69,7 @@
             color: $texto_oscuro;
             font-size: 1rem;
         }
+        
     }
 
     .kairos-search-btn {
@@ -80,6 +85,10 @@
         cursor: pointer;
         font-size: 1.3rem;
         padding: 0;
+
+        &:hover {
+            opacity: 0.8;
+        }
     }
 
     // ===== Barra pequeña: usuario + carrito =====
@@ -105,6 +114,10 @@
         cursor: pointer;
         font-size: 1.3rem;
         padding: 0;
+
+        &:hover {
+            opacity: 0.8;
+        }
     }
 
     // ===== Dropdown del menú =====
