--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -26,3 +26,4 @@ $bootstrap-icons-font-src: url("../node_modules/bootstrap-icons/font/fonts/boots
 @import "./sections/footer.scss";
 @import "./sections/login.scss";
 @import "./sections/registro.scss";
+@import "./sections/zonadepago.scss";
