--- a/css/styles.css
+++ b/css/styles.css
@@ -17133,4 +17133,502 @@ html {
           align-self: stretch;
           flex: 1; }
 
+.zona-de-pago-pc {
+  background: #1c0538;
+  padding: 47px 0 47px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 31px;
+  align-items: center;
+  justify-content: flex-start;
+  height: 2405px;
+  position: relative;
+  overflow: hidden; }
+  .zona-de-pago-pc, .zona-de-pago-pc * {
+    box-sizing: border-box; }
+  .zona-de-pago-pc .cabecera {
+    background: #1c0538;
+    padding: 0 30px;
+    display: flex;
+    flex-direction: row;
+    gap: 34px;
+    align-items: center;
+    justify-content: center;
+    align-self: stretch;
+    flex-shrink: 0;
+    height: 125px;
+    position: relative; }
+    .zona-de-pago-pc .cabecera .logo {
+      flex-shrink: 0;
+      width: 116px;
+      height: 88px;
+      position: relative;
+      object-fit: cover;
+      aspect-ratio: 116/88; }
+    .zona-de-pago-pc .cabecera .barra-de-b-squeda {
+      background: #6f12e0;
+      border-radius: 70px;
+      border: 3px solid #5e3a8b;
+      padding: 22px 53px;
+      display: flex;
+      flex-direction: row;
+      gap: 26px;
+      align-items: center;
+      justify-content: flex-start;
+      flex: 1;
+      height: 89px;
+      position: relative;
+      overflow: hidden; }
+      .zona-de-pago-pc .cabecera .barra-de-b-squeda .desplegable-de-plataformas {
+        flex-shrink: 0;
+        width: 58px;
+        height: 58px;
+        position: relative;
+        object-fit: cover;
+        aspect-ratio: 1; }
+      .zona-de-pago-pc .cabecera .barra-de-b-squeda .desplegable-plataforma {
+        background: #ffffff;
+        border-radius: 70px;
+        padding: 4px 269px;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        align-items: flex-start;
+        justify-content: flex-start;
+        flex: 1;
+        position: relative;
+        overflow: hidden; }
+      .zona-de-pago-pc .cabecera .barra-de-b-squeda .frame-1 {
+        padding: 10px;
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
+        align-items: center;
+        justify-content: center;
+        align-self: stretch;
+        flex-shrink: 0;
+        height: 54px;
+        position: relative; }
+      .zona-de-pago-pc .cabecera .barra-de-b-squeda .frame-2 {
+        padding: 10px;
+        flex-shrink: 0;
+        width: 77px;
+        height: 77px;
+        position: relative; }
+      .zona-de-pago-pc .cabecera .barra-de-b-squeda .lupa {
+        width: 57px;
+        height: 57px;
+        position: absolute;
+        left: 10px;
+        top: 10px;
+        object-fit: cover;
+        aspect-ratio: 1; }
+    .zona-de-pago-pc .cabecera .usuario {
+      background: #6f12e0;
+      border-radius: 70px;
+      border: 3px solid #5e3a8b;
+      padding: 10px 16px;
+      display: flex;
+      flex-direction: row;
+      gap: 24px;
+      align-items: flex-end;
+      justify-content: flex-start;
+      flex-shrink: 0;
+      position: relative;
+      overflow: hidden; }
+      .zona-de-pago-pc .cabecera .usuario .frame-3 {
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
+        align-items: center;
+        justify-content: flex-start;
+        flex-shrink: 0;
+        position: relative; }
+      .zona-de-pago-pc .cabecera .usuario .usuario2 {
+        flex-shrink: 0;
+        width: 68px;
+        height: 68px;
+        position: relative;
+        object-fit: cover;
+        aspect-ratio: 1; }
+      .zona-de-pago-pc .cabecera .usuario .frame-4 {
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
+        align-items: center;
+        justify-content: flex-start;
+        flex-shrink: 0;
+        position: relative; }
+      .zona-de-pago-pc .cabecera .usuario .carrito {
+        flex-shrink: 0;
+        width: 66px;
+        height: 66px;
+        position: relative;
+        object-fit: cover;
+        aspect-ratio: 1; }
+  .zona-de-pago-pc .carrito2 {
+    padding: 193px 102px 193px 100px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+    justify-content: flex-start;
+    align-self: stretch;
+    flex-shrink: 0;
+    position: relative;
+    overflow: hidden; }
+    .zona-de-pago-pc .carrito2 .frame-9 {
+      padding: 10px;
+      display: flex;
+      flex-direction: row;
+      gap: 10px;
+      align-items: center;
+      justify-content: flex-end;
+      flex-shrink: 0;
+      width: 1718px;
+      height: 1464px;
+      position: relative;
+      overflow: hidden; }
+      .zona-de-pago-pc .carrito2 .frame-9 .frame-5 {
+        padding: 10px;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        align-items: center;
+        justify-content: flex-start;
+        align-self: stretch;
+        flex-shrink: 0;
+        position: relative;
+        overflow: hidden; }
+      .zona-de-pago-pc .carrito2 .frame-9 .elemento-carrito {
+        background: #5e3a8b;
+        border-radius: 15px;
+        display: flex;
+        flex-direction: row;
+        gap: 50px;
+        align-items: center;
+        justify-content: flex-start;
+        flex-shrink: 0;
+        height: 191px;
+        position: relative;
+        overflow: hidden; }
+        .zona-de-pago-pc .carrito2 .frame-9 .elemento-carrito .imagen {
+          border-radius: 30px;
+          padding: 10px;
+          display: flex;
+          flex-direction: row;
+          gap: 10px;
+          align-items: center;
+          justify-content: center;
+          flex-shrink: 0;
+          width: 199px;
+          height: 185px;
+          position: relative;
+          overflow: hidden; }
+          .zona-de-pago-pc .carrito2 .frame-9 .elemento-carrito .imagen .car-tula {
+            border-radius: 15px;
+            align-self: stretch;
+            flex: 1;
+            position: relative;
+            object-fit: cover; }
+        .zona-de-pago-pc .carrito2 .frame-9 .elemento-carrito .texto {
+          padding: 10px;
+          display: flex;
+          flex-direction: column;
+          gap: 10px;
+          align-items: center;
+          justify-content: center;
+          flex-shrink: 0;
+          width: 277px;
+          height: 186px;
+          position: relative;
+          overflow: hidden; }
+          .zona-de-pago-pc .carrito2 .frame-9 .elemento-carrito .texto .titulo {
+            display: flex;
+            flex-direction: row;
+            gap: 0;
+            align-items: flex-start;
+            justify-content: flex-start;
+            align-self: stretch;
+            flex-shrink: 0;
+            height: 51px;
+            position: relative;
+            overflow: hidden; }
+            .zona-de-pago-pc .carrito2 .frame-9 .elemento-carrito .texto .titulo .producto-1 {
+              color: #ffffff;
+              text-align: left;
+              font: 400 20px "GasoekOne-Regular", sans-serif;
+              position: relative;
+              flex: 1;
+              height: 31px;
+              display: flex;
+              align-items: center;
+              justify-content: flex-start; }
+            .zona-de-pago-pc .carrito2 .frame-9 .elemento-carrito .texto .titulo ._99 {
+              color: #ffffff;
+              text-align: left;
+              font: 400 20px "GasoekOne-Regular", sans-serif;
+              position: relative;
+              align-self: stretch;
+              display: flex;
+              align-items: center;
+              justify-content: flex-start; }
+        .zona-de-pago-pc .carrito2 .frame-9 .elemento-carrito .botones {
+          padding: 10px;
+          display: flex;
+          flex-direction: row;
+          gap: 10px;
+          align-items: center;
+          justify-content: center;
+          flex-shrink: 0;
+          width: 114px;
+          height: 247px;
+          position: relative;
+          overflow: hidden; }
+          .zona-de-pago-pc .carrito2 .frame-9 .elemento-carrito .botones ._1 {
+            color: #ffffff;
+            text-align: left;
+            font-family: "Raleway-SemiBold", sans-serif;
+            font-size: 22px;
+            line-height: 100%;
+            font-weight: 600;
+            position: relative;
+            width: 12px;
+            height: 20px; }
+          .zona-de-pago-pc .carrito2 .frame-9 .elemento-carrito .botones .group-4,
+          .zona-de-pago-pc .carrito2 .frame-9 .elemento-carrito .botones .group-42,
+          .zona-de-pago-pc .carrito2 .frame-9 .elemento-carrito .botones .group-43 {
+            flex-shrink: 0;
+            width: 20px;
+            height: 20px;
+            position: relative;
+            overflow: visible; }
+          .zona-de-pago-pc .carrito2 .frame-9 .elemento-carrito .botones .frame-7 {
+            padding: 24px 0;
+            display: flex;
+            flex-direction: row;
+            gap: 10px;
+            align-items: center;
+            justify-content: flex-start;
+            flex-shrink: 0;
+            width: 114px;
+            height: 247px;
+            position: relative;
+            overflow: hidden; }
+          .zona-de-pago-pc .carrito2 .frame-9 .elemento-carrito .botones .trash-streamline-heroicons-outline,
+          .zona-de-pago-pc .carrito2 .frame-9 .elemento-carrito .botones .trash-streamline-heroicons-outline2,
+          .zona-de-pago-pc .carrito2 .frame-9 .elemento-carrito .botones .trash-streamline-heroicons-outline3 {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            align-items: flex-start;
+            justify-content: flex-start;
+            flex-shrink: 0;
+            width: 48px;
+            height: 49px;
+            position: relative;
+            overflow: visible; }
+      .zona-de-pago-pc .carrito2 .frame-9 .frame-25, .zona-de-pago-pc .carrito2 .frame-9 .frame-26 {
+        padding: 10px;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        align-items: center;
+        justify-content: center;
+        align-self: stretch;
+        flex: 1;
+        position: relative;
+        overflow: hidden; }
+      .zona-de-pago-pc .carrito2 .frame-9 .frame-26 {
+        justify-content: flex-start;
+        align-items: flex-start; }
+      .zona-de-pago-pc .carrito2 .frame-9 .frame-27 {
+        padding: 10px;
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
+        align-items: flex-start;
+        justify-content: flex-start;
+        align-self: stretch;
+        flex-shrink: 0;
+        position: relative;
+        overflow: hidden; }
+      .zona-de-pago-pc .carrito2 .frame-9 .resumen-del-pedido {
+        color: #ffffff;
+        text-align: center;
+        font: 400 32px "GasoekOne-Regular", sans-serif;
+        position: relative;
+        flex: 1;
+        height: 123px;
+        display: flex;
+        align-items: center;
+        justify-content: center; }
+      .zona-de-pago-pc .carrito2 .frame-9 .frame-28 {
+        padding: 10px;
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
+        align-items: center;
+        justify-content: center;
+        align-self: stretch;
+        flex-shrink: 0;
+        position: relative;
+        overflow: hidden; }
+      .zona-de-pago-pc .carrito2 .frame-9 .subtotal-x-productos,
+      .zona-de-pago-pc .carrito2 .frame-9 .env-o-estimado,
+      .zona-de-pago-pc .carrito2 .frame-9 .devoluci-n-gratuita-en-30-d-as {
+        color: #ffffff;
+        text-align: left;
+        font: 400 32px "Inter-Regular", sans-serif;
+        position: relative;
+        flex: 1;
+        height: 108px;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start; }
+      .zona-de-pago-pc .carrito2 .frame-9 .subtotal-x-productos {
+        height: auto; }
+      .zona-de-pago-pc .carrito2 .frame-9 .frame-29 {
+        padding: 10px;
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
+        align-items: flex-start;
+        justify-content: flex-end;
+        align-self: stretch;
+        flex: 1;
+        position: relative;
+        overflow: hidden; }
+      .zona-de-pago-pc .carrito2 .frame-9 ._992, .zona-de-pago-pc .carrito2 .frame-9 .gratuito {
+        color: #ffffff;
+        text-align: right;
+        font: 400 32px "Inter-Regular", sans-serif;
+        position: relative;
+        width: 198px;
+        height: 73px;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end; }
+      .zona-de-pago-pc .carrito2 .frame-9 .frame-292, .zona-de-pago-pc .carrito2 .frame-9 .frame-30, .zona-de-pago-pc .carrito2 .frame-9 .frame-31, .zona-de-pago-pc .carrito2 .frame-9 .frame-33 {
+        padding: 10px;
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
+        align-items: flex-start;
+        justify-content: flex-start;
+        align-self: stretch;
+        flex-shrink: 0;
+        position: relative;
+        overflow: hidden; }
+      .zona-de-pago-pc .carrito2 .frame-9 .div {
+        color: #ffffff;
+        text-align: center;
+        font: 400 32px "GasoekOne-Regular", sans-serif;
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center; }
+      .zona-de-pago-pc .carrito2 .frame-9 .total-del-pedido {
+        color: #ffffff;
+        text-align: left;
+        font: 400 32px "GasoekOne-Regular", sans-serif;
+        position: relative;
+        flex: 1;
+        height: 108px;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start; }
+      .zona-de-pago-pc .carrito2 .frame-9 ._993 {
+        color: #ffffff;
+        text-align: right;
+        font: 400 32px "GasoekOne-Regular", sans-serif;
+        position: relative;
+        width: 198px;
+        height: 73px;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end; }
+      .zona-de-pago-pc .carrito2 .frame-9 .frame-72 {
+        background: #6f12e0;
+        border-radius: 15px;
+        padding: 10px;
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
+        align-items: center;
+        justify-content: center;
+        align-self: stretch;
+        flex-shrink: 0;
+        height: 131px;
+        position: relative;
+        overflow: hidden; }
+        .zona-de-pago-pc .carrito2 .frame-9 .frame-72 .confirmar-pedido {
+          color: #ffffff;
+          text-align: center;
+          font: 400 32px "GasoekOne-Regular", sans-serif;
+          position: relative;
+          flex: 1;
+          height: 134px;
+          display: flex;
+          align-items: center;
+          justify-content: center; }
+  .zona-de-pago-pc .footer {
+    background: #1c0538;
+    padding: 13px;
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+    align-items: flex-end;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-content: flex-end;
+    align-self: stretch;
+    flex: 1;
+    position: relative;
+    overflow: hidden; }
+    .zona-de-pago-pc .footer .frame-12 {
+      display: flex;
+      flex-direction: row;
+      gap: 29px;
+      align-items: center;
+      justify-content: flex-start;
+      flex-shrink: 0;
+      position: relative; }
+    .zona-de-pago-pc .footer .con-cenos,
+    .zona-de-pago-pc .footer .t-rminos-y-condiciones,
+    .zona-de-pago-pc .footer .t-rminos-y-condiciones2 {
+      color: #ffffff;
+      text-align: center;
+      font: 400 24px "GasoekOne-Regular", sans-serif;
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center; }
+    .zona-de-pago-pc .footer .con-cenos {
+      width: 170px; }
+    .zona-de-pago-pc .footer .t-rminos-y-condiciones {
+      width: 365px; }
+    .zona-de-pago-pc .footer .t-rminos-y-condiciones2 {
+      width: 127px; }
+    .zona-de-pago-pc .footer .frame-22 {
+      padding: 0 0 20px 0;
+      display: flex;
+      flex-direction: row;
+      gap: 20px;
+      align-items: center;
+      justify-content: flex-end;
+      flex-shrink: 0;
+      height: 26.01px;
+      position: relative; }
+    .zona-de-pago-pc .footer .icons-8-tik-tok-100-1,
+    .zona-de-pago-pc .footer .icons-8-twitterx-100-1-1,
+    .zona-de-pago-pc .footer .icons-8-instagram-100-1,
+    .zona-de-pago-pc .footer .icons-8-facebook-nuevo-100-1 {
+      flex-shrink: 0;
+      width: 45px;
+      height: 45px;
+      position: relative;
+      object-fit: cover;
+      aspect-ratio: 1; }
+
 /*# sourceMappingURL=styles.css.map */
