--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -27,3 +27,4 @@ $bootstrap-icons-font-src: url("../node_modules/bootstrap-icons/font/fonts/boots
 @import "./sections/login.scss";
 @import "./sections/registro.scss";
 @import "./sections/zonadepago.scss";
+@import "./sections/navigation.scss";
