--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -19,3 +19,5 @@ $bootstrap-icons-font-src: url("../node_modules/bootstrap-icons/font/fonts/boots
 // Components - Kairos
 @import "./sections/navigation.scss";
 @import "./sections/footer.scss";
+@import "./sections/soporte.scss";
+@import "./sections/trabaja_con_nosotros.scss";
